--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Quando os tripulantes embarcaram no famoso RMS Titanic em Abril de 1912, é muito provável que eles não esperavam pelo fim trágico do transatlântico que partiu da Inglaterra em direção a Nova Iorque. O gigantesco navio que demorou quatro anos para ficar pronto, <a href='https://pt.wikipedia.org/wiki/RMS_Titanic'>afundou nas águas do Oceano Atlântico em 14 de Abril de 1912 quando colidiu as 23h40 contra um iceberg</a>.\n",
     "\n",
-    "Naquela noite, 1514 pessoas morreram, segundo a Junta Comercial Britânica (Bingham, John (1999). The Loss of the Titanic, 1912 (Londres: The Stationery Office). p. 197. ISBN 978-0-11-702403-8.). A tragédia serviu como base para a geração de diversas regras para maior segurança marítima, como garantir a presença de mais botes salva-vidas, que exercícios de emergência fossem propriamente realizados e que os equipamentos de rádio em navios comerciais fossem operados ininterruptamente. Para monitorar a presença de icebergs no Atlântico, foi criada a Patrulha Internacional do Gelo, cujo as regulações marítimas são realizadas pela <a href='https://pt.wikipedia.org/wiki/Conven%C3%A7%C3%A3o_Internacional_para_a_Salvaguarda_da_Vida_Humana_no_Mar'>Convenção Internacional para a Salvaguarda da Vida Humana no Mar</a>\n",
+    "Naquela noite, 1514 pessoas morreram, segundo a Junta Comercial Britânica¹. A tragédia serviu como base para a geração de diversas regras para maior segurança marítima, como garantir a presença de mais botes salva-vidas, que exercícios de emergência fossem propriamente realizados e que os equipamentos de rádio em navios comerciais fossem operados ininterruptamente. Para monitorar a presença de icebergs no Atlântico, foi criada a Patrulha Internacional do Gelo, cujo as regulações marítimas são realizadas pela <a href='https://pt.wikipedia.org/wiki/Conven%C3%A7%C3%A3o_Internacional_para_a_Salvaguarda_da_Vida_Humana_no_Mar'>Convenção Internacional para a Salvaguarda da Vida Humana no Mar</a>\n",
     "\n",
     "<h1>Apresentando os dados</h1>\n",
     "\n",
@@ -1747,6 +1747,24 @@
     "<h1>Conclusão</h1>\n",
     "\n",
     "O Naufrágio do Titanic não foi a primeira nem será a última tragédia a ocorrer na história da humanidade. Assim como em outros eventos passados, tentamos nos reerguer novamente, aprendendo lições importantes e evitando que novos episódios surjam. Além de questões filosóficas acerca da fragilidade da vida ou da implacabilidade da natureza sobre o homem, o Naufrágio do Titanic nos mostra que não importa o quão grande algo possa ser, a queda e ruína podem chegar até mesmo aos gigantes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Bibliografia</h1>\n",
+    "\n",
+    "¹Bingham, John (1999). The Loss of the Titanic, 1912 (Londres: The Stationery Office). p. 197. ISBN 978-0-11-702403-8\n",
+    "https://pt.wikipedia.org/wiki/RMS_Titanic<br>\n",
+    "https://pt.wikipedia.org/wiki/Conven%C3%A7%C3%A3o_Internacional_para_a_Salvaguarda_da_Vida_Humana_no_Mar<br>\n",
+    "https://www.udacity.com/api/nodes/5420148578/supplemental_media/titanic-datacsv/download<br>\n",
+    "http://super.abril.com.br/historia/qual-a-idade-da-maioridade/<br>\n",
+    "https://www.geni.com/people/Lionel-Leonard/6000000016211210238<br>\n",
+    "https://www.geni.com/people/William-Cahoone-Johnson-jr/6000000016207818906<br>\n",
+    "https://www.geni.com/people/William-Henry-T%C3%B6rnquist/6000000015947610959<br>\n",
+    "https://www.geni.com/people/William-Henry-Harrison/6000000016152065209<br>\n",
+    "https://www.geni.com/people/John-Richard-Fry/6000000016142357235<br>"
    ]
   }
  ],
